[package]
name = "speng-radium"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# This is the library loaded by SpaceEngine when patched
[lib]
name = "rloader"
path = "src/lib.rs"
crate-type = ["cdylib"]

# Better performance with color-eyre
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
once_cell = "1.17.1"
parking_lot = "0.12.1"
serde = { version = "1.0.152", features = ["derive"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
