[package]
name = "speng-radium"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "radium_dll"
path = "src/lib.rs"
crate-type = ["cdylib"]

# Better performance with color-eyre
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
bytemuck = "1.13.0"
color-eyre = "0.6.2"
eyre = "0.6.8"
lnk = "0.5.1"
mlua = { version = "0.8.7", features = ["lua54", "vendored"] }
once_cell = "1.17.1"
parking_lot = "0.12.1"
serde = { version = "1.0.152", features = ["derive"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
windows = { version = "0.44.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
