[package]
name = "speng-radium-bootstrapper"
version = "0.0.0"
edition = "2021"

[lib]
name = "version"
crate_type = ["cdylib"]

[dependencies]
gensym = "0.1.0"
once_cell = "1.17.1"
paste = "1.0.12"

[dependencies.windows]
version = "*"
features = ["Win32_Foundation"]

[dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
]
