[package]
name = "speng-radium"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "libradium"
crate-type = ["cdylib"]

[[bin]]
name = "radium"
path = "src/main.rs"

[dependencies]
bitflags = "1.3.2"
bytemuck = "1.13.0"
color-eyre = "0.6.2"
dll-syringe = "0.15.0"
dynasm = "2.0.0"
dynasmrt = "2.0.0"
eyre = "0.6.8"
if_chain = "1.0.2"
lnk = "0.5.1"
mlua = { version = "0.8.7", features = ["lua54", "vendored"] }
once_cell = "1.17.1"
parking_lot = "0.12.1"
path-clean = "1.0.1"
speng-radium-api = { path = "../radium-api" }
retour = "0.1.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
walkdir = "2.3.2"

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

# This should only be used when absolutely necessary, like when hooking a function.
[dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]
